Regression: Cycles Bump node producing broken normals in 3.4 #103049

Closed
opened 2022-12-09 00:57:36 +01:00 by Matouš Marek · 17 comments

System Information
Operating system: Windows 10 64-bit
Graphics card: Nvidia RTX 3060 Ti, also reproduced on Nvidia GTX 1660

Blender Version
Broken: 3.4.0
Worked: 3.3.0

Short description of error
The Bump node in Cycles produces wrong, inverted-like normals that cause light to leak through from the other side. This is especially apparent in the corners of interiors with a world lighting, or when placing a point light inside an object with a bump-node shader (see attached .blend file). The same scene works flawlessly in Eevee and in the 3.3 release of Cycles.

Exact steps for others to reproduce the error
Use a bump node in a Cycles shader, plug any texture into the bump node height input. Place a light on the other side of the mesh with said material. There will be light leaking as if the mesh was illuminated by the light.

Wrong behaviour in 3.4.0:
Wrong.png
Correct behaviour in 3.3.0:
Correct.png
Bump Node Test.blend

**System Information** Operating system: Windows 10 64-bit Graphics card: Nvidia RTX 3060 Ti, also reproduced on Nvidia GTX 1660 **Blender Version** Broken: 3.4.0 Worked: 3.3.0 **Short description of error** The Bump node in Cycles produces wrong, inverted-like normals that cause light to leak through from the other side. This is especially apparent in the corners of interiors with a world lighting, or when placing a point light inside an object with a bump-node shader (see attached .blend file). The same scene works flawlessly in Eevee and in the 3.3 release of Cycles. **Exact steps for others to reproduce the error** Use a bump node in a Cycles shader, plug any texture into the bump node height input. Place a light on the other side of the mesh with said material. There will be light leaking as if the mesh was illuminated by the light. Wrong behaviour in 3.4.0: ![Wrong.png](https://archive.blender.org/developer/F14045683/Wrong.png) Correct behaviour in 3.3.0: ![Correct.png](https://archive.blender.org/developer/F14045681/Correct.png) [Bump Node Test.blend](https://archive.blender.org/developer/F14045701/Bump_Node_Test.blend)
Author

Added subscriber: @Mylapqn

Added subscriber: @Mylapqn
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

This seems to be fixed in master, will look at the log and possibly bisect to see what might have fixed it.

This seems to be fixed in master, will look at the log and possibly bisect to see what might have fixed it.
Omar Emara changed title from Cycles Bump node producing broken normals to Regression: Cycles Bump node producing broken normals in 3.4 2022-12-09 10:23:23 +01:00
Author

In #103049#1457413, @OmarEmaraDev wrote:
This seems to be fixed in master, will look at the log and possibly bisect to see what might have fixed it.

Would you recommend to just use 3.5 Alpha for now? This is quite a critical issue for my ongoing projects and due to the backwards-incompatible Mix node change in 3.4, it's difficult to revert to 3.3 now.

> In #103049#1457413, @OmarEmaraDev wrote: > This seems to be fixed in master, will look at the log and possibly bisect to see what might have fixed it. Would you recommend to just use 3.5 Alpha for now? This is quite a critical issue for my ongoing projects and due to the backwards-incompatible Mix node change in 3.4, it's difficult to revert to 3.3 now.
Member

It is not known when a corrective release for 3.4 will happen, so if this is a show stopper for you, going to 3.5 seems like your only option for now.

It is not known when a corrective release for 3.4 will happen, so if this is a show stopper for you, going to 3.5 seems like your only option for now.
Author

Thank you!

Thank you!

Added subscriber: @aerobraking

Added subscriber: @aerobraking

Just for the record, this bug also appears when using the "Normal Map" Node. I quickly saw it in one of my projects as the rendering looked different to 3.3.

Just for the record, this bug also appears when using the "Normal Map" Node. I quickly saw it in one of my projects as the rendering looked different to 3.3.
Author

Yes, besides Normal and Bump I also noticed the problem in the Displacement node. Must be something with the way normals are rendered in general.

I managed to sort of work around the problem by using the Solidify modifier on the affected meshes (any thickness works) in case this helps anyone. This is still not ideal, of course, but gets rid of the problem quickly in most cases.

Yes, besides Normal and Bump I also noticed the problem in the Displacement node. Must be something with the way normals are rendered in general. I managed to sort of work around the problem by using the Solidify modifier on the affected meshes (any thickness works) in case this helps anyone. This is still not ideal, of course, but gets rid of the problem quickly in most cases.

Added subscriber: @cassidy

Added subscriber: @cassidy

This issue was referenced by fd3943dbd5

This issue was referenced by fd3943dbd5d95ec5d5dda24acf7646796280997f

This issue was referenced by 3d29bbcc38

This issue was referenced by 3d29bbcc387feea063b48ce747668d1143f312f7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-12-15 22:08:06 +01:00

This issue was referenced by None@63157

This issue was referenced by None@63157

Added subscriber: @thinsoldier

Added subscriber: @thinsoldier

Removed previous comment. Looks like I was very late to the discussion. Seems all my problems are fixed, both inside and out, in today's build of 3.5 and 3.4.1

Removed previous comment. Looks like I was very late to the discussion. Seems all my problems are fixed, both inside and out, in today's build of 3.5 and 3.4.1
Thomas Dinges added this to the 3.4 milestone 2023-02-07 19:01:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103049
No description provided.