Fix T103049: Cycles specular light leak regression

The logic here is not ideal but was unintentionally changed in refactoring
for path guiding, now restore it back to 3.3 behavior again.